test/error/lexing_files/escaped_char.err
File "lexing_files/escaped_char.st", line 1, character 9:
1 | x := '\\z'.
            ^
Error: Lexing error.
Hint: Char is one character, expected "'" not 'z'.
